--- a/tedxoxford/src/components/App.scss
+++ b/tedxoxford/src/components/App.scss
@@ -62,8 +62,11 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
+  position: relative;
   align-items: center;
   margin: 20px 0px;
+  z-index: 100;
+
 
   img {
     height: 30px;
@@ -77,6 +80,14 @@ body {
     font-weight: 300;
     transition: ease-in-out 0.3s;
     display: inline-block;
+    position: relative;
+    z-index: 100;
+  }
+
+  .links {
+    display:none;
+    position: relative;
+    z-index: 1000;
   }
 
   .links a:hover {
@@ -100,7 +111,141 @@ body {
       color: white;
     }
   }
+  .dropbtn {
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: white;
+    z-index: 100;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1000;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 }
+
+.bg-styling {
+  a {
+    color:white;
+  }
+}
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  left:0;
+  top:0;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  position: fixed;
+  left:0;
+  top:0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 950px) {
+  .navbar .links {
+    display: block;
+  }
+
+  .bm-burger-button {
+    display: none;
+  }
+
+}
+@media (max-width: 949px) {
+  .navbar .links {
+    display: none;
+  }
+
+  .bm-burger-button {
+    display: block;
+  }
+}
+
 
 /**
 ==============
@@ -831,6 +976,10 @@ body {
     bottom: 10px;
   }
 
+  .file-progress {
+    margin-bottom: 20px;
+  }
+
   input[type="submit"] {
     margin-top:20px;
     background-color: $red;
@@ -849,5 +998,112 @@ body {
       padding: 20px;
       border-radius: 10px;
     }
+  }
+}
+
+
+
+.applicants {
+  margin: 0px;
+  padding: 20px;
+
+  h1 {
+    color: $heading-blue;
+    font-weight: $header-weight;
+  }
+
+  h2 {
+    font-weight: 200;;
+  }
+
+  .button.signout {
+    position: absolute;
+    top: 30px;
+    right:30px;
+  }
+
+  .applicant-holder {
+    
+    width: 100%;
+    max-width:800px;
+
+    .applicant {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #d9e4eb;
+      color:rgb(19, 19, 19);
+      border-radius: 20px;
+      margin: 10px 0px;
+      padding: 20px;
+
+      .details {
+        .name, a {
+          color: $heading-blue;
+        }
+
+        .uni {
+          text-transform: capitalize;
+        }
+      }
+
+      .view {
+        padding: 0px 20px;
+
+        a {
+          display: inline-block;
+          color: white;
+          background-color: $red;
+          padding: 10px 25px;
+          border-radius: 10px;
+        }
+      }
+    }
+  }
+}
+
+.applicant-page {
+  padding: 20px;
+
+  h2, h3 {
+    color: $heading-blue;
+    font-weight: $header-weight;
+    margin:0;
+  }
+
+  .basic-details {
+    margin-bottom: 40px;
+    a {
+      display: inline-block;
+      color: white;
+      background-color: #7587EC;
+      border: 3px solid #7587EC;
+      padding: 10px 25px;
+      border-radius: 80px;
+      margin: 10px 20px 10px 0px
+    }
+
+    .video {
+      background-color: white;
+      color: #7587EC;
+      border: 3px solid #7587EC;
+    }
+
+    .uni, .time {
+      display: block;
+      color: rgb(136, 136, 136);
+      text-transform: capitalize;
+    }
+
+    .time {
+      margin-bottom: 20px;
+    }
+  }
+
+  .answers {
+    display: block;
+    width: 800px;
+    max-width: 100%;
   }
 }
