--- a/tedxoxford/src/components/App.scss
+++ b/tedxoxford/src/components/App.scss
@@ -332,6 +332,52 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 }
 
+.accordion {
+  max-width: 600px;
+  margin: 2rem auto;
+}
+
+.accordion-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: ease-in-out .2s;
+  border-bottom: 1px solid black;
+  font-size: 20px;
+  font-weight: 600;;
+}
+
+.accordion-title:hover {
+  background-color: $red;
+  color: white;
+}
+
+.accordion-title,
+.accordion-content {
+  padding: 1rem;
+}
+
+.accordion-content {
+  transition: ease-in-out .2s;
+  border-bottom: 1px solid black;
+}
+
+
+.detail-home {
+  padding: 0px 30px;
+  width: 100%;
+  max-width:100%;
+  background-color: black;
+  color: white;
+  margin:40px 0px;
+
+  .content {
+    padding: 50px;
+    font-weight: 300;
+  }
+}
+
 /**
 ===============
 [3.1] EVENTS  #
