--- a/tedxoxford/src/components/App.scss
+++ b/tedxoxford/src/components/App.scss
@@ -14,6 +14,7 @@
 2.1 — Navbar
 2.2 — Menu
 2.3 - FAQs
+2.4 - Schedule
 3 — Small Components
 3.1 — Events
 3.2 - Talks
@@ -386,6 +387,80 @@ Note: Beware of modifying this element as it can break the animations - you shou
   }
 }
 
+
+/**
+=================
+[2.4] SCHEDULE  #
+=================
+**/
+
+
+.schedule {
+  max-width: 800px;
+  margin: 2rem auto;
+  margin-bottom: 50px;
+  .schedule-item {
+    display: flex;
+    margin: 14px 10px;
+    line-height: 16px;
+    
+    &.speaker-hover {
+      cursor: pointer;
+    }
+    
+
+        
+
+    .time {
+      width: 80px;
+      flex-shrink: 0;
+    }
+
+    .details {
+
+
+      .speaker {
+        font-weight: 600;
+      }
+
+      .speaker-content {
+        display: flex;
+
+        .speaker-col {
+          padding: 0 !important;
+        }
+
+        .speaker-img {
+          flex: 1;
+          padding: 10px;
+          
+          img {
+            max-width: 100%;
+            filter: grayscale(100%);
+            border-radius: 5px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          }
+        }
+
+        .speaker-desc {
+          flex: 1;
+          margin: 10px;
+          padding: 14px;
+          border-radius: 5px;
+          line-height: normal;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          border: solid 0.5px #ccc;
+        }
+      }
+
+      .title {
+        &.talker {
+          font-style: italic;
+        }
+      }
+    }
+  }
+}
 
 
 /**
